Add Scale.com-style improvements with dotted V logo, Inter fonts, and dropdown menus

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>vAIctory - AI-Powered Solutions</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -12,27 +15,29 @@
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Inter', sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
             line-height: 1.6;
             color: #0a0a0a;
             background-color: #ffffff;
             overflow-x: hidden;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .navbar {
             position: fixed;
             top: 0;
             width: 100%;
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-            padding: 1.5rem 0;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(20px) saturate(180%);
+            border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+            padding: 1rem 0;
             z-index: 1000;
             transition: all 0.3s ease;
         }
 
         .navbar-container {
-            max-width: 1280px;
+            max-width: 1400px;
             margin: 0 auto;
             padding: 0 2rem;
             display: flex;
@@ -40,48 +45,154 @@
             align-items: center;
         }
 
-        .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: #0a0a0a;
+        .logo-container {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
             text-decoration: none;
+        }
+
+        .logo-icon {
+            width: 36px;
+            height: 36px;
+            background: white;
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: 2px solid #0a0a0a;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .logo-icon::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: 
+                radial-gradient(circle at 25% 25%, #0a0a0a 2px, transparent 2px),
+                radial-gradient(circle at 75% 75%, #0a0a0a 2px, transparent 2px);
+            background-size: 8px 8px;
+            opacity: 0.3;
+        }
+
+        .logo-icon::after {
+            content: 'V';
+            font-weight: 900;
+            font-size: 20px;
+            color: #0a0a0a;
+            position: relative;
+            z-index: 1;
+        }
+
+        .logo-text {
+            font-size: 1.25rem;
+            font-weight: 800;
+            color: #0a0a0a;
+            letter-spacing: -0.5px;
         }
 
         .nav-links {
             display: flex;
             gap: 2.5rem;
             list-style: none;
+            align-items: center;
+        }
+
+        .nav-item {
+            position: relative;
         }
 
         .nav-links a {
             color: #5a5a5a;
             text-decoration: none;
-            font-size: 0.95rem;
+            font-size: 0.9375rem;
             font-weight: 500;
             transition: color 0.2s;
+            display: flex;
+            align-items: center;
+            gap: 0.25rem;
         }
 
         .nav-links a:hover {
             color: #0a0a0a;
         }
 
+        .dropdown-icon {
+            width: 14px;
+            height: 14px;
+            transition: transform 0.2s;
+        }
+
+        .dropdown {
+            position: relative;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: white;
+            min-width: 240px;
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.12);
+            border-radius: 12px;
+            padding: 0.5rem 0;
+            margin-top: 0.5rem;
+            border: 1px solid rgba(0, 0, 0, 0.05);
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown:hover .dropdown-icon {
+            transform: rotate(180deg);
+        }
+
+        .dropdown-item {
+            padding: 0.75rem 1.5rem;
+            display: block;
+            color: #5a5a5a;
+            text-decoration: none;
+            font-size: 0.9375rem;
+            transition: all 0.2s;
+        }
+
+        .dropdown-item:hover {
+            background: #fafafa;
+            color: #0a0a0a;
+        }
+
+        .dropdown-item-title {
+            font-weight: 600;
+            color: #0a0a0a;
+            font-size: 0.8125rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            padding: 0.75rem 1.5rem 0.25rem;
+        }
+
         .nav-cta {
             background: #0a0a0a;
             color: white;
-            padding: 0.6rem 1.5rem;
+            padding: 0.625rem 1.5rem;
             border-radius: 8px;
             text-decoration: none;
-            font-weight: 500;
+            font-weight: 600;
+            font-size: 0.9375rem;
             transition: all 0.2s;
         }
 
         .nav-cta:hover {
             background: #333;
+            transform: translateY(-1px);
         }
 
         .hero {
-            margin-top: 80px;
-            padding: 8rem 0 6rem;
+            margin-top: 73px;
+            padding: 10rem 0 8rem;
             text-align: center;
             background: linear-gradient(180deg, #fafafa 0%, #ffffff 100%);
         }
@@ -93,20 +204,23 @@
         }
 
         .hero h1 {
-            font-size: 4rem;
-            font-weight: 700;
+            font-size: 4.5rem;
+            font-weight: 800;
             line-height: 1.1;
             margin-bottom: 1.5rem;
             color: #0a0a0a;
-            letter-spacing: -0.02em;
+            letter-spacing: -0.03em;
         }
 
         .hero-subtitle {
-            font-size: 1.5rem;
+            font-size: 1.375rem;
             color: #666;
             margin-bottom: 2.5rem;
-            line-height: 1.5;
+            line-height: 1.6;
             font-weight: 400;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .hero-cta {
@@ -121,15 +235,17 @@
             padding: 1rem 2rem;
             border-radius: 10px;
             text-decoration: none;
-            font-weight: 500;
+            font-weight: 600;
             font-size: 1rem;
             transition: all 0.2s;
             display: inline-block;
+            letter-spacing: -0.01em;
         }
 
         .btn-primary:hover {
             background: #333;
             transform: translateY(-2px);
+            box-shadow: 0 10px 30px rgba(10, 10, 10, 0.2);
         }
 
         .btn-secondary {
@@ -138,67 +254,71 @@
             padding: 1rem 2rem;
             border-radius: 10px;
             text-decoration: none;
-            font-weight: 500;
+            font-weight: 600;
             font-size: 1rem;
-            border: 1.5px solid #0a0a0a;
+            border: 1.5px solid rgba(0, 0, 0, 0.1);
             transition: all 0.2s;
             display: inline-block;
+            letter-spacing: -0.01em;
         }
 
         .btn-secondary:hover {
             background: #fafafa;
             transform: translateY(-2px);
+            border-color: rgba(0, 0, 0, 0.15);
         }
 
         .stats {
-            padding: 4rem 0;
+            padding: 5rem 0;
             background: #0a0a0a;
             color: white;
         }
 
         .stats-container {
-            max-width: 1280px;
+            max-width: 1400px;
             margin: 0 auto;
             padding: 0 2rem;
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 3rem;
+            gap: 4rem;
             text-align: center;
         }
 
         .stat-item h3 {
-            font-size: 3rem;
-            font-weight: 700;
+            font-size: 3.5rem;
+            font-weight: 800;
             margin-bottom: 0.5rem;
+            letter-spacing: -0.02em;
         }
 
         .stat-item p {
             color: #999;
             font-size: 1rem;
+            font-weight: 500;
         }
 
         .features {
-            padding: 8rem 0;
+            padding: 10rem 0;
             background: #ffffff;
         }
 
         .features-container {
-            max-width: 1280px;
+            max-width: 1400px;
             margin: 0 auto;
             padding: 0 2rem;
         }
 
         .section-header {
             text-align: center;
-            margin-bottom: 5rem;
+            margin-bottom: 6rem;
         }
 
         .section-header h2 {
-            font-size: 3rem;
-            font-weight: 700;
+            font-size: 3.5rem;
+            font-weight: 800;
             margin-bottom: 1rem;
             color: #0a0a0a;
-            letter-spacing: -0.02em;
+            letter-spacing: -0.03em;
         }
 
         .section-header p {
@@ -206,30 +326,32 @@
             color: #666;
             max-width: 600px;
             margin: 0 auto;
+            font-weight: 400;
         }
 
         .features-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
             gap: 2rem;
         }
 
         .feature-card {
-            padding: 2.5rem;
+            padding: 3rem;
             background: #fafafa;
-            border-radius: 16px;
+            border-radius: 20px;
             transition: all 0.3s ease;
-            border: 1px solid rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(0, 0, 0, 0.04);
         }
 
         .feature-card:hover {
             transform: translateY(-4px);
             box-shadow: 0 20px 40px rgba(0, 0, 0, 0.08);
+            border-color: rgba(0, 0, 0, 0.08);
         }
 
         .feature-card h3 {
             font-size: 1.5rem;
-            font-weight: 600;
+            font-weight: 700;
             margin-bottom: 1rem;
             color: #0a0a0a;
         }
@@ -237,11 +359,12 @@
         .feature-card p {
             color: #666;
             font-size: 1rem;
-            line-height: 1.6;
+            line-height: 1.7;
+            font-weight: 400;
         }
 
         .testimonial {
-            padding: 8rem 0;
+            padding: 10rem 0;
             background: #fafafa;
         }
 
@@ -253,20 +376,22 @@
         }
 
         .testimonial-text {
-            font-size: 1.75rem;
+            font-size: 2rem;
             line-height: 1.5;
             color: #0a0a0a;
             margin-bottom: 2rem;
             font-weight: 400;
+            letter-spacing: -0.01em;
         }
 
         .testimonial-author {
             color: #666;
             font-size: 1rem;
+            font-weight: 500;
         }
 
         .cta-section {
-            padding: 8rem 0;
+            padding: 10rem 0;
             background: #0a0a0a;
             color: white;
             text-align: center;
@@ -279,26 +404,27 @@
         }
 
         .cta-section h2 {
-            font-size: 3.5rem;
-            font-weight: 700;
+            font-size: 4rem;
+            font-weight: 800;
             margin-bottom: 1.5rem;
-            letter-spacing: -0.02em;
+            letter-spacing: -0.03em;
         }
 
         .cta-section p {
-            font-size: 1.25rem;
+            font-size: 1.375rem;
             color: #999;
             margin-bottom: 2.5rem;
+            font-weight: 400;
         }
 
         .footer {
             background: #0a0a0a;
             color: white;
-            padding: 4rem 0 2rem;
+            padding: 5rem 0 2rem;
         }
 
         .footer-container {
-            max-width: 1280px;
+            max-width: 1400px;
             margin: 0 auto;
             padding: 0 2rem;
         }
@@ -307,13 +433,15 @@
             display: grid;
             grid-template-columns: 2fr 1fr 1fr 1fr;
             gap: 4rem;
-            margin-bottom: 3rem;
+            margin-bottom: 4rem;
         }
 
         .footer-col h4 {
-            font-size: 1rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
+            font-size: 0.875rem;
+            font-weight: 700;
+            margin-bottom: 1.5rem;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .footer-col ul {
@@ -321,13 +449,15 @@
         }
 
         .footer-col ul li {
-            margin-bottom: 0.75rem;
+            margin-bottom: 1rem;
         }
 
         .footer-col ul li a {
             color: #999;
             text-decoration: none;
             transition: color 0.2s;
+            font-size: 0.9375rem;
+            font-weight: 400;
         }
 
         .footer-col ul li a:hover {
@@ -337,17 +467,18 @@
         .footer-bottom {
             text-align: center;
             padding-top: 2rem;
-            border-top: 1px solid #333;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
             color: #666;
+            font-size: 0.875rem;
         }
 
         @media (max-width: 768px) {
             .hero h1 {
-                font-size: 2.5rem;
+                font-size: 2.75rem;
             }
 
             .hero-subtitle {
-                font-size: 1.25rem;
+                font-size: 1.125rem;
             }
 
             .nav-links {
@@ -355,16 +486,24 @@
             }
 
             .section-header h2 {
-                font-size: 2rem;
+                font-size: 2.5rem;
             }
 
             .footer-content {
                 grid-template-columns: 1fr;
-                gap: 2rem;
+                gap: 2.5rem;
             }
 
             .hero-cta {
                 flex-direction: column;
+            }
+
+            .features-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .stat-item h3 {
+                font-size: 2.5rem;
             }
         }
     </style>
@@ -372,11 +511,38 @@
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="#" class="logo">vAIctory</a>
+            <a href="#" class="logo-container">
+                <div class="logo-icon"></div>
+                <span class="logo-text">vAIctory</span>
+            </a>
             <ul class="nav-links">
-                <li><a href="#features">Features</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li class="nav-item dropdown">
+                    <a href="#solutions">Solutions <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></a>
+                    <div class="dropdown-content">
+                        <div class="dropdown-item-title">Platform</div>
+                        <a href="#" class="dropdown-item">AI Platform</a>
+                        <a href="#" class="dropdown-item">API Documentation</a>
+                        <a href="#" class="dropdown-item">Data Platform</a>
+                        <div class="dropdown-item-title" style="margin-top: 1rem;">Industries</div>
+                        <a href="#" class="dropdown-item">Healthcare</a>
+                        <a href="#" class="dropdown-item">Financial Services</a>
+                        <a href="#" class="dropdown-item">E-Commerce</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a href="#developers">Developers <svg class="dropdown-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg></a>
+                    <div class="dropdown-content">
+                        <div class="dropdown-item-title">Resources</div>
+                        <a href="#" class="dropdown-item">Documentation</a>
+                        <a href="#" class="dropdown-item">API Reference</a>
+                        <a href="#" class="dropdown-item">SDKs</a>
+                        <a href="#" class="dropdown-item">Examples</a>
+                        <div class="dropdown-item-title" style="margin-top: 1rem;">Community</div>
+                        <a href="#" class="dropdown-item">Discord</a>
+                        <a href="#" class="dropdown-item">GitHub</a>
+                    </div>
+                </li>
+                <li class="nav-item"><a href="#company">Company</a></li>
             </ul>
             <a href="#contact" class="nav-cta">Get Started</a>
         </div>
@@ -407,7 +573,7 @@
             </div>
             <div class="stat-item">
                 <h3>99.9%</h3>
-                <p>Uptime</p>
+                <p>Uptime SLA</p>
             </div>
             <div class="stat-item">
                 <h3>50ms</h3>
@@ -473,7 +639,7 @@
             <div class="footer-content">
                 <div>
                     <h4>vAIctory</h4>
-                    <p style="color: #999; margin-top: 1rem; line-height: 1.6;">
+                    <p style="color: #999; margin-top: 1rem; line-height: 1.6; font-size: 0.9375rem;">
                         The AI platform built for scale. Enterprise-grade infrastructure for intelligent applications.
                     </p>
                 </div>
@@ -483,6 +649,7 @@
                         <li><a href="#features">Features</a></li>
                         <li><a href="#pricing">Pricing</a></li>
                         <li><a href="#docs">Documentation</a></li>
+                        <li><a href="#api">API Reference</a></li>
                     </ul>
                 </div>
                 <div>
@@ -491,6 +658,7 @@
                         <li><a href="#about">About</a></li>
                         <li><a href="#blog">Blog</a></li>
                         <li><a href="#careers">Careers</a></li>
+                        <li><a href="#press">Press</a></li>
                     </ul>
                 </div>
                 <div>
@@ -499,6 +667,7 @@
                         <li><a href="#contact">Contact</a></li>
                         <li><a href="#status">Status</a></li>
                         <li><a href="#security">Security</a></li>
+                        <li><a href="#privacy">Privacy</a></li>
                     </ul>
                 </div>
             </div>
