--- a/index.html
+++ b/index.html
@@ -55,35 +55,34 @@
         .logo-icon {
             width: 36px;
             height: 36px;
-            background: white;
-            border-radius: 10px;
+            background: linear-gradient(135deg, #0a0a0a 0%, #333 100%);
+            border-radius: 8px;
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 2px solid #0a0a0a;
             position: relative;
-            overflow: hidden;
+            box-shadow: 0 2px 8px rgba(10, 10, 10, 0.15);
         }
 
         .logo-icon::before {
             content: '';
             position: absolute;
-            width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 25% 25%, #0a0a0a 2px, transparent 2px),
-                radial-gradient(circle at 75% 75%, #0a0a0a 2px, transparent 2px);
-            background-size: 8px 8px;
-            opacity: 0.3;
+            width: 0;
+            height: 0;
+            border-left: 5px solid transparent;
+            border-right: 5px solid transparent;
+            border-bottom: 8px solid white;
+            transform: translateY(-2px);
         }
 
         .logo-icon::after {
-            content: 'V';
-            font-weight: 900;
-            font-size: 20px;
-            color: #0a0a0a;
-            position: relative;
-            z-index: 1;
+            content: '';
+            position: absolute;
+            width: 8px;
+            height: 2px;
+            background: white;
+            transform: translateY(6px);
+            border-radius: 1px;
         }
 
         .logo-text {
