Change branding to VAICTORY with bold, powerful typography

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vAIctory - AI-Powered Solutions</title>
+    <title>VAICTORY - AI-Powered Solutions</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -87,9 +87,11 @@
 
         .logo-text {
             font-size: 1.25rem;
-            font-weight: 800;
+            font-weight: 900;
             color: #0a0a0a;
-            letter-spacing: -0.5px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            font-family: 'Inter', sans-serif;
         }
 
         .nav-links {
@@ -512,7 +514,7 @@
         <div class="navbar-container">
             <a href="#" class="logo-container">
                 <div class="logo-icon"></div>
-                <span class="logo-text">vAIctory</span>
+                <span class="logo-text">VAICTORY</span>
             </a>
             <ul class="nav-links">
                 <li class="nav-item dropdown">
@@ -619,7 +621,7 @@
     <section class="testimonial">
         <div class="testimonial-container">
             <p class="testimonial-text">
-                "vAIctory has transformed how we build AI applications. The infrastructure is rock solid and the developer experience is exceptional."
+                "VAICTORY has transformed how we build AI applications. The infrastructure is rock solid and the developer experience is exceptional."
             </p>
             <p class="testimonial-author">— Sarah Chen, CTO at TechCorp</p>
         </div>
@@ -637,7 +639,7 @@
         <div class="footer-container">
             <div class="footer-content">
                 <div>
-                    <h4>vAIctory</h4>
+                    <h4>VAICTORY</h4>
                     <p style="color: #999; margin-top: 1rem; line-height: 1.6; font-size: 0.9375rem;">
                         The AI platform built for scale. Enterprise-grade infrastructure for intelligent applications.
                     </p>
@@ -671,7 +673,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 vAIctory. All rights reserved.</p>
+                <p>&copy; 2024 VAICTORY. All rights reserved.</p>
             </div>
         </div>
     </footer>
