Highlight AI in VAICTORY logo with gradient color

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
             font-family: 'Inter', sans-serif;
         }
 
+        .logo-ai {
+            color: #667eea;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+
         .nav-links {
             display: flex;
             gap: 2.5rem;
@@ -514,7 +522,7 @@
         <div class="navbar-container">
             <a href="#" class="logo-container">
                 <div class="logo-icon"></div>
-                <span class="logo-text">VAICTORY</span>
+                <span class="logo-text">V<span class="logo-ai">AI</span>CTORY</span>
             </a>
             <ul class="nav-links">
                 <li class="nav-item dropdown">
